[package]
name = "herp-my-service-rust"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
actix-web="^3.1.0"
# Test Framework for the actix Webserver
actix-rt="^1"
# JSON Serialisation and Deserialisation
serde_json="^1.0"